# kamu-engine-datafusion

./: .dockerignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  deny.toml
.github/workflows/: build.yaml  release.yaml
data/: alberta.parquet
data/arrow-issue-4308/: data.parquet
data/datafusion-issue-14281/: data.parquet  schema.parquet
data/datafusion-issue-6463/: british-columbia.parquet
image/: Dockerfile
src/: datafusion_hacks.rs  engine.rs  grpc.rs  lib.rs  main.rs
tests/tests/: mod.rs  test_map.rs  test_regressions.rs  test_transform.rs
