[package]
name = "kamu-engine-datafusion"
version = "0.3.0"
authors = ["Kamu Data Inc. <info@kamu.dev>"]
license-file = "LICENSE.txt"
edition = "2021"
publish = false


[lib]
doctest = false


[dependencies]
# Kamu
internal-error = { git = "https://github.com/kamu-data/kamu-cli", tag = "v0.128.0", version = "0.128.0", default-features = false }
opendatafabric = { git = "https://github.com/kamu-data/kamu-cli", tag = "v0.128.0", version = "0.128.0", default-features = false }

# Egine
datafusion = "28"

# Utils
async-trait = "0.1"
chrono = "0.4"
tokio = { version = "1", default-features = false, features=[] }
tokio-stream = "0.1"
tonic = "0.9"
tracing = "0.1"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


[dev-dependencies]
env_logger = "0.10"
tempfile = "3"
test-log = { version = "0.2", features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


# Emit the line info tables for our crates to produce useful crash reports and backtraces.
# We don't emit info for dependencies as this significantly increases binary size.
# See: https://doc.rust-lang.org/cargo/reference/profiles.html#debug
[profile.release.package]
datafusion = { debug = 1 }
opendatafabric = { debug = 1 }
kamu-engine-datafusion = { debug = 1 }


[profile.ci]
inherits = "dev"
# CI builds often are closer to from-scratch builds. Incremental adds an extra
# dependency-tracking overhead and significantly increases the amount of IO and
# the size of ./target, which make caching less effective
# See: https://matklad.github.io/2021/09/04/fast-rust-builds.html#CI-Workflow
incremental = false
# Line info is enough to get good backtraces in CI - we don't need the
# full debugging symbols that are only useful when attaching a debugger.
debug = 1
