[package]
name = "kamu-engine-datafusion"
version = "0.9.0"
authors = ["Kamu Data Inc. <info@kamu.dev>"]
license-file = "LICENSE.txt"
edition = "2024"
publish = false


[lib]
doctest = false


[dependencies]
# Kamu
internal-error = { git = "https://github.com/kamu-data/kamu-cli", branch = "master", version = "0.255.0", default-features = false }
odf = { package = "opendatafabric-metadata", git = "https://github.com/kamu-data/kamu-cli", branch = "master", version = "0.255.0", default-features = false }

# Egine
datafusion = { version = "51", default-features = false, features = [
    "crypto_expressions",
    "encoding_expressions",
    "parquet",
    "regex_expressions",
    "unicode_expressions",
    "compression",
] }
datafusion-functions-json = { version = "0.51", default-features = false }

# Utils
async-trait = { version = "0.1", default-features = false }
chrono = { version = "0.4", default-features = false }
indoc = { version = "2", default-features = false }
thiserror = { version = "2", default-features = false }
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread",
    "signal",
    "time",
] }
tokio-stream = { version = "0.1", default-features = false }
tonic = { version = "0.14", default-features = false, features = ["router"] }
tracing = { version = "0.1", default-features = false }
tracing-bunyan-formatter = { version = "0.3", default-features = false }
tracing-log = { version = "0.2", default-features = false }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


[dev-dependencies]
env_logger = "0.11"
pretty_assertions = "1"
tempfile = "3"
test-log = { version = "0.2", features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


# Emit the line info tables for our crates to produce useful crash reports and backtraces.
# We don't emit info for dependencies as this significantly increases binary size.
# See: https://doc.rust-lang.org/cargo/reference/profiles.html#debug
[profile.release.package]
datafusion = { debug = 1 }
opendatafabric-metadata = { debug = 1 }
kamu-engine-datafusion = { debug = 1 }


[profile.ci]
inherits = "dev"
# CI builds often are closer to from-scratch builds. Incremental adds an extra
# dependency-tracking overhead and significantly increases the amount of IO and
# the size of ./target, which make caching less effective
# See: https://matklad.github.io/2021/09/04/fast-rust-builds.html#CI-Workflow
incremental = false
# Line info is enough to get good backtraces in CI - we don't need the
# full debugging symbols that are only useful when attaching a debugger.
debug = 1
